--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+#Application port
+server.port=8888
+
+#Database connection
+spring.datasource.url=jdbc:h2:mem:practice_db
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.initialization-mode=always
+
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+#Hibernate configuration
+spring.jpa.hibernate.ddl-auto=
